# SmartScheduleNSAU

./: LICENSE  README.md  pyproject.toml
smart_schedule_nsau/adapters/database/: __init__.py  mapping.py  meta.py  repositories.py  tables.py  uow.py
smart_schedule_nsau/adapters/database/alembic/: env.py
smart_schedule_nsau/adapters/database/migrations/: 2023_04_04_04_10_54_create_table_lessons.py  2023_04_11_04_16_53_add_uuid_column_to_lessons.py  2023_09_21_01_49_07_create_schema_lessons_schedule.py  2023_09_21_02_30_19_create_table_lessons_days.py  2023_09_21_02_50_16_create_table_lessons.py
smart_schedule_nsau/adapters/database/repositories/: __init__.py  base.py  schedule_repository.py
smart_schedule_nsau/adapters/database/tables/: __init__.py
smart_schedule_nsau/adapters/parser/: models.py  parsers.py  settings.py
smart_schedule_nsau/adapters/tg_bot/: bot.py  settings.py  views.py
smart_schedule_nsau/adapters/tg_bot/handlers/: common.py  main_menu.py  schedule.py
smart_schedule_nsau/adapters/tg_bot/keyboards/: __init__.py  main_menu.py  schedule.py
smart_schedule_nsau/application/lesson_schedule_service/: entities.py  interfaces.py
smart_schedule_nsau/application/lesson_schedule_service/dtos/: schedule.py
smart_schedule_nsau/application/lessons_schedule/: __init__.py  entities.py  enums.py  interfaces.py  services.py
smart_schedule_nsau/application/lessons_schedule/dtos/: schedule.py
smart_schedule_nsau/application/lessons_schedule/entities/: __init__.py  lesson.py  lessons_day.py  schedule.py  study_group.py
smart_schedule_nsau/application/lessons_schedule/enums/: __init__.py  lesson_types.py  week_parities.py
smart_schedule_nsau/application/lessons_schedule/interfaces/: __init__.py  uow.py
smart_schedule_nsau/application/lessons_schedule/services/: __init__.py  datetime_with_tz.py  week_parity_determinant.py
smart_schedule_nsau/composites/: alembic_runner.py  cli.py  schedule_parser.py  tg_bot_polling.py
smart_schedule_nsau/containers/: __init__.py  tg_bot_container.py
src/smart_schedule_nsau/adapters/: cli.py  settings.py
src/smart_schedule_nsau/adapters/database/: __init__.py  mapping.py  (+5 more)
src/smart_schedule_nsau/composites/: schedule_parser.py  tg_bot_polling.py
tests/: conftest.py
(+44 files in other folders)
